--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,106 +1,122 @@
-name: CI-CD Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
       - master
 
-env:
-  AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-  INSTANCE_IP: ${{ secrets.EC2_HOST }}
-  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-
 jobs:
-  build_frontend:
+  backend-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v2
         with:
-          node-version: '20.x'
+          node-version: '14'
 
-      - name: Build frontend
+      - name: Install backend dependencies
         run: |
-          cd client
+          cd backend
           npm install
-          npm run build
-          ls -al ./dist  
 
-      - name: Upload frontend artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend
-          path: client/dist
-
-  upload_frontend_to_s3:
-    needs: build_frontend
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Download frontend artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend
-          path: client/dist
-
-      - name: Verify downloaded artifacts
-        run: ls -al client/dist  
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-
-      - name: Upload to S3
+      - name: Run backend tests
         run: |
-          aws s3 cp client/dist s3://$AWS_S3_BUCKET/ --recursive
+          cd backend
+          npm test -- --detectOpenHandles --forceExit
 
-  build_backend:
+  frontend-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
 
-      - name: Login to DockerHub
+      - name: Install frontend dependencies
+        run: |
+          cd frontend
+          npm install
+
+      - name: Run frontend tests
+        run: |
+          cd frontend
+          npm test
+
+  build-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Build Docker image for backend
+        run: |
+          docker build -t backend:1.0.0 ./backend
+
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Push Docker image to Docker Hub
         run: |
-          cd api
-          docker build -t estate-agent-backend .
-          docker tag estate-agent-backend:latest ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
+          docker tag backend:1.0.0 ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+          docker push ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
 
-  deploy_backend_to_ec2:
-    needs: build_backend
+  build-frontend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: SSH into EC2 instance and deploy
-        uses: appleboy/ssh-action@master
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          host: ${{ secrets.INSTANCE_IP }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.MY_EC2_SSH_KEY }}
-          script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
-            sudo docker stop estate-agent-backend || true
-            sudo docker rm estate-agent-backend || true
-            sudo docker run -d -p 3000:3000 --name estate-agent-backend ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
+          node-version: '14'
+
+      - name: Install frontend dependencies
+        run: |
+          cd frontend
+          npm install
+
+      - name: Build frontend
+        run: |
+          cd frontend
+          npm run build
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Deploy frontend to S3
+        run: |
+          aws s3 sync ./frontend/build s3://${{ secrets.AWS_S3_BUCKET }}/ --acl public-read
+
+  deploy-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }}
+
+      - name: Deploy backend to EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} '
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0 &&
+            sudo docker stop backend-container || true &&
+            sudo docker rm backend-container || true &&
+            sudo docker run -d -p 4000:4000 --name backend-container ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
+          '
