--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -100,6 +100,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.MY_EC2_SSH_KEY }}
           script: |
+            ssh -i "estateagent.pem" ec2-user@ec2-18-184-52-77.eu-central-1.compute.amazonaws.com
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
             sudo docker stop estate-agent-backend || true
             sudo docker rm estate-agent-backend || true
