--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -70,11 +70,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v4
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -85,30 +82,16 @@ jobs:
           docker build -t estate-agent-backend .
           docker tag estate-agent-backend:latest ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
-
-  deploy_backend_to_ec2:
-    needs: build_backend
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: SSH into EC2 instance and deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.INSTANCE_IP }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.MY_EC2_SSH_KEY }}
-          script: |
-            - name: Install Docker on EC2
-          run: |
-            echo "${{ secrets.MY_EC2_SSH_KEY }}"> ./private_key.pem
+   
+      - name: Install Docker on EC2
+        run: |
+            echo "${{ secrets.MY_EC2_SSH_KEY }}" > ./private_key.pem
             chmod 600 ./private_key.pem
             ssh -i ./private_key.pem -o StrictHostKeyChecking=no $EC2_HOST "
             sudo yum update -y
             sudo yum install -y docker
             sudo service docker start
-            sudo docker run -d -p 80:5000 $DOCKER_USERNAME/estate-agent-backend:latest
+            sudo docker run -d -p 80:3000 ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
             "
 
 
