--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,9 +18,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v2
         with:
-          node-version: '20.x'
+          node-version: '14.x'
 
       - name: Build frontend
         run: |
@@ -30,7 +30,7 @@ jobs:
           ls -al ./dist  
 
       - name: Upload frontend artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v2
         with:
           name: frontend
           path: client/dist
@@ -43,7 +43,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download frontend artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v2
         with:
           name: frontend
           path: client/dist
@@ -52,11 +52,10 @@ jobs:
         run: ls -al client/dist  
 
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
       - name: Upload to S3
@@ -64,13 +63,14 @@ jobs:
           aws s3 cp client/dist s3://$AWS_S3_BUCKET/ --recursive
 
   build_backend:
+    needs: upload_frontend_to_s3
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Login to DockerHub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -79,19 +79,26 @@ jobs:
         run: |
           cd api
           docker build -t estate-agent-backend .
-          docker tag estate-agent-backend:latest ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
-   
-      - name: Install Docker on EC2
+          docker tag estate-agent-backend:latest $DOCKER_USERNAME/estate-agent-backend:latest
+          docker push $DOCKER_USERNAME/estate-agent-backend:latest
+
+  deploy_backend:
+    needs: build_backend
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up SSH connection
+        uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.MY_EC2_SSH_KEY }}
+
+      - name: Deploy backend to EC2
         run: |
-            echo "${{ secrets.MY_EC2_SSH_KEY }}" > ./private_key.pem
-            chmod 600 ./private_key.pem
-            ssh -i ./private_key.pem -o StrictHostKeyChecking=no $EC2_HOST "
-            sudo yum update -y
-            sudo yum install -y docker
-            sudo service docker start
-            sudo docker run -d -p 80:3000 ${{ secrets.DOCKER_USERNAME }}/estate-agent-backend:latest
-            "
+          ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST }} '
+            sudo docker pull $DOCKER_USERNAME/estate-agent-backend:latest &&
+            sudo docker stop backend-container || true &&
+            sudo docker rm backend-container || true &&
+            sudo docker run -d -p 3000:3000 --name backend-container $DOCKER_USERNAME/estate-agent-backend:latest
+          '
 
 
            
