--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,8 +73,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ DOCKER_USERNAME }}
-          password: ${{ DOCKER_PASSWORD }}
+          username: ${{ secret.DOCKER_USERNAME }}
+          password: ${{ secret.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
         run: |
@@ -95,10 +95,10 @@ jobs:
       - name: Deploy backend to EC2
         run: |
           ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST }} '
-            sudo docker pull $DOCKER_USERNAME/estate-agent-backend:latest &&
+            sudo docker pull ${{ secret.DOCKER_USERNAME }}/estate-agent-backend:latest &&
             sudo docker stop backend-container || true &&
             sudo docker rm backend-container || true &&
-            sudo docker run -d -p 3000:3000 --name backend-container $DOCKER_USERNAME/estate-agent-backend:latest
+            sudo docker run -d -p 3000:3000 --name backend-container ${{ secret.DOCKER_USERNAME }}/estate-agent-backend:latest
           '
 
 
