--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,50 +1,19 @@
 name: CI/CD Pipeline
 on: [push]
 jobs:
-  backend-test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Installiere NodeJS
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-    - name: Installiere Abhängigkeiten
-      run: |
-        cd backend
-        npm install
-    - name: Teste
-      run: |
-        cd backend
-        npm test -- --detectOpenHandles --forceExit
-  frontend-test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Installiere NodeJS
-      uses: actions/setup-node@v4
-      with:
-        node-version: '22'
-    - name: Installiere Abhängigkeiten
-      run: |
-        cd frontend
-        npm install
-    - name: Teste
-      run: |
-        cd frontend
   build-backend:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name:  Baue Docker Image fürs Backend
+    - name:  build backend docker image
       run: |
-        docker build -t backend:1.0.0 ./backend
+        docker build -t backend:1.0.0 ./api
     - name: Loggen uns im Docker Hub ein
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
-    - name: Pushen des Docker Images
+    - name: Ppush backend docker image
       run: |
         docker tag backend:1.0.0 ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
         docker push ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
@@ -58,11 +27,11 @@ jobs:
         node-version: '20'
     - name: Installiere Abhängigkeiten
       run: |
-        cd frontend
+        cd client
         npm install
-    - name: Baue das Frontend
+    - name: build-frontend
       run: |
-        cd frontend
+        cd client
         npm run build
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
@@ -72,13 +41,13 @@ jobs:
         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
         aws-region: ${{ secrets.AWS_REGION }}
     - name: Deploy Frontend to S3
-      run: aws s3 sync ./frontend/build s3://${{ secrets.AWS_S3_BUCKET }} --acl public-read --delete
+      run: aws s3 sync ./client/dist s3://${{ secrets.AWS_S3_BUCKET }} --acl public-read --delete
       
   deploy-backend:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Setze SSH Verbindung
+    - name: Set SSH connection
       env:
         SSH_KEY: ${{ secrets.SSH_KEY }}
       run: |
