--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
-    - name: Ppush backend docker image
+    - name: Push backend docker image
       run: |
         docker tag backend:1.0.0 ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
         docker push ${{ secrets.DOCKER_USERNAME }}/backend:1.0.0
@@ -32,11 +32,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Installiere NodeJS
+    - name: install NodeJS
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-    - name: Installiere Abhängigkeiten
+    - name: Install Frontend Dependencies
       run: |
         cd client
         npm install --force
