--- a/deployment/backend-service.yaml
+++ b/deployment/backend-service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-estate-agent-backend-service
+  labels:
+    app: estate-agent
+    tier: backend
 spec:
   selector:
     app: estate-agent
@@ -11,4 +14,3 @@ spec:
       port: 3000
       targetPort: 3000
   type: ClusterIP
-
