--- a/deployment/estate-agent-ingress.yaml
+++ b/deployment/estate-agent-ingress.yaml
@@ -3,10 +3,12 @@ kind: Ingress
 metadata:
   name: estate-agent-ingress
   namespace: default
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
 spec:
   ingressClassName: nginx
   rules:
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
