--- a/frontend-service.yaml
+++ b/frontend-service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: estate-agent-frontend
-  namespace: default
+  name: estate-agent-frontend-service
 spec:
+  type: LoadBalancer
   selector:
-    app: estate-agent-frontend
+    app: estate-agent
+    tier: frontend
   ports:
     - protocol: TCP
       port: 80
